--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,11 @@
   <div id="status"></div>
   <div id="board"></div>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
+  <audio id="winSound" src="https://assets.mixkit.co/active_storage/sfx/257/257-preview.mp3"></audio>
+  <audio id="loseSound" src="https://assets.mixkit.co/active_storage/sfx/259/259-preview.mp3"></audio>
 </body>
 
 </html>
