--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <title>Multiplayer Tic-Tac-Toe</title>
   <link rel="stylesheet" href="styles.css">
 </head>
